tests/api/reference/negative/07-pad-to-before-logical.asm
emit.u8(0x11)
reserve(8)
pad_to(4, 0xaa)
